<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:src="@drawable/ic_teamio_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textCreateAccount"
            style="@style/sign_in_to_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <LinearLayout
            android:id="@+id/layoutName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/drawable_background"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCreateAccount">

            <EditText
                android:id="@+id/edtName"
                style="@style/email_text_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30.2dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/transparent"
                android:hint="@string/text_Name"
                android:inputType="textEmailAddress"
                android:paddingTop="16dp"
                android:paddingBottom="18dp"
                android:textColorHint="@color/text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/drawable_background"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutName">

            <EditText
                android:id="@+id/edtEmail"
                style="@style/email_text_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30.2dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/transparent"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:paddingTop="16dp"
                android:paddingBottom="18dp"
                android:textColorHint="@color/text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/drawable_background"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

            <EditText
                android:id="@+id/edtPassword"
                style="@style/email_text_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30.2dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/transparent"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="18dp"
                android:textColorHint="@color/text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/drawable_background"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword">

            <EditText
                android:id="@+id/edtConfirmPassword"
                style="@style/email_text_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30.2dp"
                android:layout_marginEnd="4dp"
                android:background="@android:color/transparent"
                android:hint="@string/text_confirm_password"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="18dp"
                android:textColorHint="@color/text_color" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            style="@style/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:background="@drawable/ic_rectangle"
            android:paddingStart="25dp"
            android:paddingTop="16dp"
            android:paddingEnd="25dp"
            android:paddingBottom="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutConfirmPassword" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                style="@style/don_t_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already_have_account" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textSignIn"
                style="@style/don_t_have_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/sign_in" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:background="@drawable/progress_bar_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>